Removed guava and added succesful case for service